force-app/main/default/objects/Learning_Material__c/Learning_Material__c.object-meta.xml
<CustomObject>
    <description>Learning Materials used for the LMS portal</description>
    <label>Learning Material</label>
    <nameField>
        <displayFormat>LM-{00000000}</displayFormat>
        <label>Learning Material</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>