force-app/main/default/objects/Learning_Material__c/fields/Certificate_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Logo_URL__c</fullName>
    <label>Certificate Logo URL</label>
    <type>Url</type>
</CustomField>