force-app/main/default/objects/Learning_Material__c/fields/Certificate_Template__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Template__c</fullName>
    <label>Certificate Template</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>