force-app/main/default/objects/Learning_Material__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Estimated minutes.</description>
    <inlineHelpText>Estimated minutes.</inlineHelpText>
    <label>Duration</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>