force-app/main/default/objects/Learning_Material__c/fields/Issue_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Issue_Certificate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Issue Certificate</label>
    <type>Checkbox</type>
</CustomField>