force-app/main/default/objects/Learning_Material__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <inlineHelpText>Defines subtype.</inlineHelpText>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Lesson</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>