force-app/main/default/objects/Learning_Material__c/fields/Material_URL__c.field-meta.xml
<CustomField>
    <fullName>Material_URL__c</fullName>
    <label>Material URL</label>
    <type>Url</type>
</CustomField>