force-app/main/default/objects/Learning_Material__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description>Maximum number of attempts allowed for this quiz (1-100).</description>
    <inlineHelpText>Maximum number of times a learner can attempt this quiz.</inlineHelpText>
    <label>Max Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>