force-app/main/default/objects/Learning_Material__c/fields/Parent_Material__c.field-meta.xml
<CustomField>
    <fullName>Parent_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables hierarchy (Course → Lesson).</description>
    <inlineHelpText>Enables hierarchy (Course → Lesson).</inlineHelpText>
    <label>Parent Material</label>
    <referenceTo>Learning_Material__c</referenceTo>
    <relationshipLabel>Learning Materials</relationshipLabel>
    <relationshipName>Learning_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>