force-app/main/default/objects/Learning_Material__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <description>Minimum score percentage required to pass the quiz (0-100).</description>
    <inlineHelpText>Minimum percentage score required to pass (e.g., 70 means 70%).</inlineHelpText>
    <label>Passing Score (%)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>