force-app/main/default/objects/Learning_Material__c/fields/Quiz_Time_Limit_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Time_Limit_Minutes__c</fullName>
    <description>Time limit for the entire quiz in minutes. Required when Material Type is Quiz.</description>
    <inlineHelpText>Total time allowed to complete the quiz (in minutes). Required for Quiz materials.</inlineHelpText>
    <label>Quiz Time Limit (Minutes)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>