force-app/main/default/objects/Learning_Material__c/fields/Randomize_Questions__c.field-meta.xml
<CustomField>
    <fullName>Randomize_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, questions will be displayed in random order for each attempt.</description>
    <label>Randomize Questions</label>
    <type>Checkbox</type>
</CustomField>