force-app/main/default/objects/Learning_Material__c/fields/Show_Results__c.field-meta.xml
<CustomField>
    <fullName>Show_Results__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, results will be shown immediately after quiz completion.</description>
    <label>Show Results After Completion</label>
    <type>Checkbox</type>
</CustomField>