force-app/main/default/objects/Learning_Material__c/validationRules/Max_Attempts_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Attempts_Range_Validation</fullName>
    <active>true</active>
    <description>Max Attempts must be between 1 and 100 when provided.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Max_Attempts__c)),
    OR(
        Max_Attempts__c &lt; 1,
        Max_Attempts__c &gt; 100
    )
)</errorConditionFormula>
    <errorDisplayField>Max_Attempts__c</errorDisplayField>
    <errorMessage>Max Attempts must be between 1 and 100.</errorMessage>
</ValidationRule>