force-app/main/default/objects/Learning_Material__c/validationRules/Passing_Score_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Passing_Score_Range_Validation</fullName>
    <active>true</active>
    <description>Passing Score must be between 0 and 100 when provided.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Passing_Score__c)),
    OR(
        Passing_Score__c &lt; 0,
        Passing_Score__c &gt; 100
    )
)</errorConditionFormula>
    <errorDisplayField>Passing_Score__c</errorDisplayField>
    <errorMessage>Passing Score must be between 0% and 100%.</errorMessage>
</ValidationRule>