force-app/main/default/objects/Learning_Material__c/validationRules/Quiz_Fields_Required_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quiz_Fields_Required_Validation</fullName>
    <active>true</active>
    <description>When Material Type is Quiz, Quiz Questions, Time Limit, and Passing Score are required.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Material_Type__c, &quot;Quiz&quot;),
    OR(
        ISBLANK(Quiz_Questions__c),
        ISBLANK(Quiz_Time_Limit_Minutes__c),
        Quiz_Time_Limit_Minutes__c &lt;= 0,
        ISBLANK(Passing_Score__c),
        Passing_Score__c &lt; 0,
        Passing_Score__c &gt; 100
    )
)</errorConditionFormula>
    <errorDisplayField>Material_Type__c</errorDisplayField>
    <errorMessage>Quiz materials require: Quiz Questions (JSON), Time Limit &gt; 0 minutes, and Passing Score between 0-100%.</errorMessage>
</ValidationRule>