force-app/main/default/objects/Learning_Material__c/validationRules/Quiz_Time_Limit_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quiz_Time_Limit_Range_Validation</fullName>
    <active>true</active>
    <description>Quiz Time Limit must be between 1 and 480 minutes (8 hours max) when provided.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Quiz_Time_Limit_Minutes__c)),
    OR(
        Quiz_Time_Limit_Minutes__c &lt; 1,
        Quiz_Time_Limit_Minutes__c &gt; 480
    )
)</errorConditionFormula>
    <errorDisplayField>Quiz_Time_Limit_Minutes__c</errorDisplayField>
    <errorMessage>Quiz Time Limit must be between 1 and 480 minutes (8 hours).</errorMessage>
</ValidationRule>