force-app/main/default/objects/Learning_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Active__c</columns>
    <columns>Duration__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Material__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>